Manifests/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: default
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "order-service"
        dapr.io/app-port: "80"
        dapr.io/log-level: "info"
    spec:
      containers:
        - name: order-service
          image: daprservices.azurecr.io/orderservice:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
