Manifests/shipping-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  namespace: default
  labels:
    app: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "shipping-service"
        dapr.io/app-port: "80"
        dapr.io/log-level: "info"
    spec:
      containers:
        - name: shipping-service
          image: daprservices.azurecr.io/shippingservice:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
