Manifests/shipping-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: shipping-service
